--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ nav {
 .header__content img {
   max-width: 532px;
   border-radius: 12px;
+  object-fit: cover;
 }
 .header__content--left--title {
   font-size: 60px;
@@ -443,7 +444,7 @@ hr {
 .header__items--menu {
   display: none;
 }
-@media (max-width: 768px) {
+@media (max-width: 480px) {
   main {
     padding: 48px 24px;
   }
@@ -484,9 +485,6 @@ hr {
   .body-header__contains--item {
     display: grid;
   }
-  .header__content--left--description {
-    max-width: 100%;
-  }
   .header__content img {
     max-width: 100%;
   }
@@ -511,4 +509,56 @@ hr {
   .header__content--about--item--divider {
     display: none;
   }
+  .CTA__container--content--buttons {
+    display: grid;
+  }
+  .CTA__container--content--description {
+    margin-top: 16px;
+  }
+  .header__items--menu {
+    display: block;
+  }
+}
+@media (max-width: 768px) {
+  nav {
+    padding: 12px 24px;
+  }
+  .body-header__contains--item {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+  .CTA__container--content--description {
+    margin: auto;
+  }
+  .footer-header__contains--items--card {
+    width: 70%;
+  }
+  .footer-header__contains--items--card--pro {
+    width: 70%;
+  }
+  .header__content {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    align-items: center;
+  }
+  .header__content--left--description {
+    max-width: 100%;
+    line-height: 28px;
+  }
+  .header__content img {
+    width: 100%;
+    height: 60%;
+    
+  }
+  .header__content--left--title {
+    line-height: 1;
+    width: 100%;
+    font-size: 48px;
+    letter-spacing: -1.2px;
+  }
+  .header__content--button {
+    gap: 16px;
+        width: fit-content;
+  }
+
 }
