--- a/styles.css
+++ b/styles.css
@@ -290,6 +290,8 @@ hr {
   height: 20px;
   color: #06b6d4;
   font-family: "Geist", sans-serif;
+  flex-shrink: 0;
+  min-width: 20px;
 }
 .footer-header__contains--items--card--button {
   margin-top: 16px;
@@ -548,7 +550,6 @@ hr {
   .header__content img {
     width: 100%;
     height: 60%;
-    
   }
   .header__content--left--title {
     line-height: 1;
@@ -557,8 +558,16 @@ hr {
     letter-spacing: -1.2px;
   }
   .header__content--button {
+    display: grid;
     gap: 16px;
-        width: fit-content;
+    width: fit-content;
   }
-
+  .footer-header__contains--items--card--button {
+    display: flex;
+    text-align: left;
+  }
+  .footer-header__contains--items--card--button--sale {
+    display: flex;
+    text-align: left;
+  }
 }
