--- a/styles.css
+++ b/styles.css
@@ -446,81 +446,6 @@ hr {
 .header__items--menu {
   display: none;
 }
-@media (max-width: 480px) {
-  main {
-    padding: 48px 24px;
-  }
-  .container-padding {
-    padding: 24px;
-  }
-  .header__items--menu {
-    border: none;
-    background-color: transparent;
-  }
-  nav {
-    padding: 12px 14px;
-  }
-  .header__content--left--title {
-    font-size: 36px;
-    font-weight: 600;
-    line-height: 40px;
-    max-width: 100%;
-    width: 100%;
-  }
-  .header__content--left--description {
-    max-width: 100%;
-  }
-  .header__content--button {
-    display: flex;
-    justify-content: center;
-    gap: 16px;
-  }
-  .header__content {
-    display: grid;
-  }
-  .header__items--center {
-    display: none;
-  }
-  .header__items--right {
-    display: none;
-  }
-  .body-header__contains--item {
-    display: grid;
-  }
-  .header__content img {
-    max-width: 100%;
-  }
-  .footer-header__contains--items {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-  .footer-header__contains--items--card {
-    height: auto;
-  }
-  .footer-header__contains--items--card--pro {
-    height: auto;
-  }
-  .FAQ__items--item--title--button {
-    text-align: left;
-  }
-  .CTA__container {
-    max-width: 100%;
-  }
-  .CTA__container--content--description {
-    margin: 0;
-  }
-  .header__content--about--item--divider {
-    display: none;
-  }
-  .CTA__container--content--buttons {
-    display: grid;
-  }
-  .CTA__container--content--description {
-    margin-top: 16px;
-  }
-  .header__items--menu {
-    display: block;
-  }
-}
 @media (max-width: 768px) {
   nav {
     padding: 12px 24px;
@@ -569,5 +494,85 @@ hr {
   .footer-header__contains--items--card--button--sale {
     display: flex;
     text-align: left;
+  }
+}
+@media (max-width: 480px) {
+  main {
+    padding: 48px 24px;
+  }
+  .container-padding {
+    padding: 24px;
+  }
+  .header__items--menu {
+    border: none;
+    background-color: transparent;
+  }
+  nav {
+    padding: 12px 14px;
+  }
+  .header__content--left--title {
+    font-size: 36px;
+    font-weight: 600;
+    line-height: 40px;
+    max-width: 100%;
+    width: 100%;
+  }
+  .header__content--left--description {
+    max-width: 100%;
+  }
+  .header__content--button {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+  }
+  .header__content {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+  .header__items--center {
+    display: none;
+  }
+  .header__items--right {
+    display: none;
+  }
+  .body-header__contains--item {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+  .header__content img {
+    max-width: 100%;
+    height: 100%;
+    min-height: 340px;
+  }
+  .footer-header__contains--items {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+  .footer-header__contains--items--card {
+    height: auto;
+  }
+  .footer-header__contains--items--card--pro {
+    height: auto;
+  }
+  .FAQ__items--item--title--button {
+    text-align: left;
+  }
+  .CTA__container {
+    max-width: 100%;
+  }
+  .CTA__container--content--description {
+    margin: 0;
+  }
+  .header__content--about--item--divider {
+    display: none;
+  }
+  .CTA__container--content--buttons {
+    display: flex;
+        flex-direction: column;
+  }
+  .CTA__container--content--description {
+    margin-top: 16px;
+  }
+  .header__items--menu {
+    display: block;
   }
 }
